# posix_labs

lab4_2/: main.c
lab_1/: main.c
lab_3/: CMakeLists.txt  main.c  mainchild.c
lab_4/: main.c
lab_5/: main.c
lab_7/: main.c
lab_7.2/: CMakeLists.txt  main.cc  sub.cc
lab_8.1/: CMakeLists.txt  main  main.c  sec  sec.c
lab_8.2/: CMakeLists.txt
lab_9.1/: CMakeLists.txt  concurrent_writers.cc
lab_9.2/: ed  editor.c  main  main.c
